# grep-like

./: CMakeLists.txt  README.md  README.txt
source/: Main.cpp  Message.cppm  Runner.cppm  Searcher.cppm
tests/: test1.cpp  test2.cpp  test3.cpp
