cmake_minimum_required(VERSION 3.28.2)
project(grep-like LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS FALSE)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_VISIBILITY_INLINES_HIDDEN TRUE)

set(ROOT_FOLDER "source")

file(GLOB APP_MODULES ${CMAKE_CURRENT_LIST_DIR}/source/*.cppm ${CMAKE_CURRENT_LIST_DIR}/source/*.cpp)
source_group(${ROOT_FOLDER} FILE_SET CXX_MODULES FILES ${APP_MODULES})

add_executable(${PROJECT_NAME} ${APP_MODULES} ${CMAKE_CURRENT_LIST_DIR}/source/Main.cpp)

if(WIN32)
set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/DEBUG")
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_LIST_DIR}/bin")
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_LIST_DIR}/bin")
endif()
